# cross-oem-studies

./: MANIFEST.in  Makefile  README.md  STEER.md  gateway.tf  openapi-spec.json  pyproject.toml  submit_chat_completions.py  submit_chat_completions_offline.py  submit_ray_job.py  vast_template.json
benchmark/: run_benchmark.py
cluster/: serve_config.yaml
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  types.ts
dgx-spark/: Dockerfile  docker-compose.yml
grafana/alerts/: node_failure.json
grafana/dashboards/: cross_oem.json
radeon/: Dockerfile  Dockerfile.runpod  docker-compose.yml  entrypoint_runpod.sh
rtx-5090/: Dockerfile
scripts/: provision_alarms.py
setup-scripts/hetzner-headnode/: install-headnode-config.sh  install-ray-dashboard-url.sh
setup-scripts/hetzner-headnode/templates/etc/nginx/sites-available/: ray-dashboard.auth.conf  ray-dashboard.public.conf
setup-scripts/hetzner-headnode/templates/etc/systemd/system/: odyn-cp.service
setup-scripts/hetzner-headnode/templates/opt/odyn-cp/: odyn-cp.env
src/: __init__.py  app.py  batch_job.py  cli_sdk.py  commands.py  config.py  demo_verifier.py  dgx_worker.py  failover.py  failover_tester.py  grafana_fixer.py  main.py  node_visibility.py  observability.py  persistence.py  radeon_worker.py  recovery_verifier.py  router.py  router_dispatch.py  rtx5090_worker.py  schema.py  serve_ops.py  standby_worker.py
test/: conftest.py  test_cluster.py  test_e2e_regression.py  test_sla_queue.py  test_slo.py  test_verifiers.py
user-workloads/: .gitkeep
(+2 files in other folders)
